syntax = "proto3";

package eu.avalonya.api;

option java_multiple_files = true;
option java_package = "eu.avalonya.api.protobuf";
option java_outer_classname = "AvalonyaProtobuffers";

message Player {
  bytes uuid = 1;
  string name = 2;
  int32 rankId = 3;
  int64 firstLogin = 4;
  string lastIp = 5;
  double money = 6;
}